--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 #canvas {
-	width: 300px;
-	height:300px;
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
@@ -14,4 +12,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+}
+
+#mazeholder {
+	visibility: hidden;
 }
