--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
 	text-align: center;
 }
 
-#mazeholder {
+#maze {
 	visibility: hidden;
+}
+
+#data-holder {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 100px;
+	border-style: solid;
+	border-color: gray;
+	border-width: 2px;
 }
